// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NamespaceTreeView /> collapses item by clicking minus button 1`] = `
<body>
  <div>
    <div
      class="TreeView"
      data-testid="namespace-tree-view"
    >
      <div
        class="DrawerTitle title"
      >
        Tree View
      </div>
      <ul
        aria-multiselectable="false"
        class="MuiTreeView-root"
        role="tree"
      >
        <li
          aria-expanded="true"
          class="MuiTreeItem-root Mui-expanded"
          data-testid="namespace-levels-deep"
          role="treeitem"
          tabindex="0"
        >
          <div
            class="MuiTreeItem-content"
          >
            <div
              class="MuiTreeItem-iconContainer"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                data-testid="minus-square"
                focusable="false"
                style="width: 14px; height: 14px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                />
              </svg>
            </div>
            <div
              class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
            >
              levels-deep
               
            </div>
          </div>
          <ul
            class="MuiCollapse-root MuiTreeItem-group group MuiCollapse-entered"
            role="group"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <li
                  class="MuiTreeItem-root Mui-expanded"
                  data-testid="namespace-level-deep-child-a"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="MuiTreeItem-content"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <div
                        style="opacity: 0.3;"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          data-testid="minus-square"
                          focusable="false"
                          style="width: 14px; height: 14px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
                    >
                      level-deep-child-a
                       
                    </div>
                  </div>
                </li>
                <li
                  aria-expanded="false"
                  class="MuiTreeItem-root"
                  data-testid="namespace-level-deep-child-b"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="MuiTreeItem-content"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        data-testid="plus-square"
                        focusable="false"
                        style="width: 14px; height: 14px;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 12.977h-4.923v4.896q0 .401-.281.682t-.682.281v0q-.375 0-.669-.281t-.294-.682v-4.896h-4.923q-.401 0-.682-.294t-.281-.669v0q0-.401.281-.682t.682-.281h4.923v-4.896q0-.401.294-.682t.669-.281v0q.401 0 .682.281t.281.682v4.896h4.923q.401 0 .682.281t.281.682v0q0 .375-.281.669t-.682.294z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
                    >
                      level-deep-child-b
                       
                    </div>
                  </div>
                  <ul
                    class="MuiCollapse-root MuiTreeItem-group group"
                    role="group"
                    style="min-height: 0px; height: 0px; transition-duration: 300ms;"
                  >
                    <div
                      class="MuiCollapse-wrapper"
                    >
                      <div
                        class="MuiCollapse-wrapperInner"
                      >
                        <li
                          class="MuiTreeItem-root Mui-expanded"
                          data-testid="namespace-level-deep-subchild-a"
                          role="treeitem"
                          tabindex="-1"
                        >
                          <div
                            class="MuiTreeItem-content"
                          >
                            <div
                              class="MuiTreeItem-iconContainer"
                            >
                              <div
                                style="opacity: 0.3;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  data-testid="minus-square"
                                  focusable="false"
                                  style="width: 14px; height: 14px;"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                                  />
                                </svg>
                              </div>
                            </div>
                            <div
                              class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
                            >
                              level-deep-subchild-a
                               
                            </div>
                          </div>
                        </li>
                      </div>
                    </div>
                  </ul>
                </li>
              </div>
            </div>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`<NamespaceTreeView /> expands item by clicking plus button 1`] = `
<body>
  <div>
    <div
      class="TreeView"
      data-testid="namespace-tree-view"
    >
      <div
        class="DrawerTitle title"
      >
        Tree View
      </div>
      <ul
        aria-multiselectable="false"
        class="MuiTreeView-root"
        role="tree"
      >
        <li
          aria-expanded="true"
          class="MuiTreeItem-root Mui-expanded"
          data-testid="namespace-levels-deep"
          role="treeitem"
          tabindex="0"
        >
          <div
            class="MuiTreeItem-content"
          >
            <div
              class="MuiTreeItem-iconContainer"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                data-testid="minus-square"
                focusable="false"
                style="width: 14px; height: 14px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                />
              </svg>
            </div>
            <div
              class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
            >
              levels-deep
               
            </div>
          </div>
          <ul
            class="MuiCollapse-root MuiTreeItem-group group MuiCollapse-entered"
            role="group"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <li
                  class="MuiTreeItem-root Mui-expanded"
                  data-testid="namespace-level-deep-child-a"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="MuiTreeItem-content"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <div
                        style="opacity: 0.3;"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          data-testid="minus-square"
                          focusable="false"
                          style="width: 14px; height: 14px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
                    >
                      level-deep-child-a
                       
                    </div>
                  </div>
                </li>
                <li
                  aria-expanded="true"
                  class="MuiTreeItem-root Mui-expanded"
                  data-testid="namespace-level-deep-child-b"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="MuiTreeItem-content"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        data-testid="minus-square"
                        focusable="false"
                        style="width: 14px; height: 14px;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
                    >
                      level-deep-child-b
                       
                    </div>
                  </div>
                  <ul
                    class="MuiCollapse-root MuiTreeItem-group group"
                    role="group"
                    style="min-height: 0px; height: 0px; transition-duration: 300ms;"
                  >
                    <div
                      class="MuiCollapse-wrapper"
                    >
                      <div
                        class="MuiCollapse-wrapperInner"
                      >
                        <li
                          class="MuiTreeItem-root Mui-expanded"
                          data-testid="namespace-level-deep-subchild-a"
                          role="treeitem"
                          tabindex="-1"
                        >
                          <div
                            class="MuiTreeItem-content"
                          >
                            <div
                              class="MuiTreeItem-iconContainer"
                            >
                              <div
                                style="opacity: 0.3;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  data-testid="minus-square"
                                  focusable="false"
                                  style="width: 14px; height: 14px;"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                                  />
                                </svg>
                              </div>
                            </div>
                            <div
                              class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
                            >
                              level-deep-subchild-a
                               
                            </div>
                          </div>
                        </li>
                      </div>
                    </div>
                  </ul>
                </li>
              </div>
            </div>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`<NamespaceTreeView /> renders 2 levels deep 1`] = `
<body>
  <div>
    <div
      class="TreeView"
      data-testid="namespace-tree-view"
    >
      <div
        class="DrawerTitle title"
      >
        Tree View
      </div>
      <ul
        aria-multiselectable="false"
        class="MuiTreeView-root"
        role="tree"
      >
        <li
          aria-expanded="true"
          class="MuiTreeItem-root Mui-expanded"
          data-testid="namespace-levels-deep"
          role="treeitem"
          tabindex="0"
        >
          <div
            class="MuiTreeItem-content"
          >
            <div
              class="MuiTreeItem-iconContainer"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                data-testid="minus-square"
                focusable="false"
                style="width: 14px; height: 14px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                />
              </svg>
            </div>
            <div
              class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
            >
              levels-deep
               
            </div>
          </div>
          <ul
            class="MuiCollapse-root MuiTreeItem-group group MuiCollapse-entered"
            role="group"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <li
                  class="MuiTreeItem-root Mui-expanded"
                  data-testid="namespace-level-deep-child-a"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="MuiTreeItem-content"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <div
                        style="opacity: 0.3;"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          data-testid="minus-square"
                          focusable="false"
                          style="width: 14px; height: 14px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
                    >
                      level-deep-child-a
                       
                    </div>
                  </div>
                </li>
                <li
                  aria-expanded="true"
                  class="MuiTreeItem-root Mui-expanded"
                  data-testid="namespace-level-deep-child-b"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="MuiTreeItem-content"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        data-testid="minus-square"
                        focusable="false"
                        style="width: 14px; height: 14px;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
                    >
                      level-deep-child-b
                       
                    </div>
                  </div>
                  <ul
                    class="MuiCollapse-root MuiTreeItem-group group MuiCollapse-entered"
                    role="group"
                    style="min-height: 0px;"
                  >
                    <div
                      class="MuiCollapse-wrapper"
                    >
                      <div
                        class="MuiCollapse-wrapperInner"
                      >
                        <li
                          class="MuiTreeItem-root Mui-expanded"
                          data-testid="namespace-level-deep-subchild-a"
                          role="treeitem"
                          tabindex="-1"
                        >
                          <div
                            class="MuiTreeItem-content"
                          >
                            <div
                              class="MuiTreeItem-iconContainer"
                            >
                              <div
                                style="opacity: 0.3;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  data-testid="minus-square"
                                  focusable="false"
                                  style="width: 14px; height: 14px;"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                                  />
                                </svg>
                              </div>
                            </div>
                            <div
                              class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
                            >
                              level-deep-subchild-a
                               
                            </div>
                          </div>
                        </li>
                      </div>
                    </div>
                  </ul>
                </li>
              </div>
            </div>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`<NamespaceTreeView /> renders namespace with 2 children namespaces 1`] = `
<body>
  <div>
    <div
      class="TreeView"
      data-testid="namespace-tree-view"
    >
      <div
        class="DrawerTitle title"
      >
        Tree View
      </div>
      <ul
        aria-multiselectable="false"
        class="MuiTreeView-root"
        role="tree"
      >
        <li
          aria-expanded="true"
          class="MuiTreeItem-root Mui-expanded"
          data-testid="namespace-acme-org"
          role="treeitem"
          tabindex="0"
        >
          <div
            class="MuiTreeItem-content"
          >
            <div
              class="MuiTreeItem-iconContainer"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                data-testid="minus-square"
                focusable="false"
                style="width: 14px; height: 14px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                />
              </svg>
            </div>
            <div
              class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
            >
              acme-org
               
            </div>
          </div>
          <ul
            class="MuiCollapse-root MuiTreeItem-group group MuiCollapse-entered"
            role="group"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <li
                  class="MuiTreeItem-root Mui-expanded"
                  data-testid="namespace-team-a"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="MuiTreeItem-content"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <div
                        style="opacity: 0.3;"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          data-testid="minus-square"
                          focusable="false"
                          style="width: 14px; height: 14px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
                    >
                      team-a
                       
                    </div>
                  </div>
                </li>
                <li
                  class="MuiTreeItem-root Mui-expanded"
                  data-testid="namespace-team-b"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="MuiTreeItem-content"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <div
                        style="opacity: 0.3;"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          data-testid="minus-square"
                          focusable="false"
                          style="width: 14px; height: 14px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
                    >
                      team-b
                       
                    </div>
                  </div>
                </li>
              </div>
            </div>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`<NamespaceTreeView /> renders namespace with children namespaces and a subnamespace 1`] = `
<body>
  <div>
    <div
      class="TreeView"
      data-testid="namespace-tree-view"
    >
      <div
        class="DrawerTitle title"
      >
        Tree View
      </div>
      <ul
        aria-multiselectable="false"
        class="MuiTreeView-root"
        role="tree"
      >
        <li
          aria-expanded="true"
          class="MuiTreeItem-root Mui-expanded"
          data-testid="namespace-org-a"
          role="treeitem"
          tabindex="0"
        >
          <div
            class="MuiTreeItem-content"
          >
            <div
              class="MuiTreeItem-iconContainer"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                data-testid="minus-square"
                focusable="false"
                style="width: 14px; height: 14px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                />
              </svg>
            </div>
            <div
              class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
            >
              org-a
               
            </div>
          </div>
          <ul
            class="MuiCollapse-root MuiTreeItem-group group MuiCollapse-entered"
            role="group"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <li
                  class="MuiTreeItem-root Mui-expanded"
                  data-testid="namespace-team-c"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="MuiTreeItem-content"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <div
                        style="opacity: 0.3;"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          data-testid="minus-square"
                          focusable="false"
                          style="width: 14px; height: 14px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
                    >
                      team-c
                       
                    </div>
                  </div>
                </li>
                <li
                  class="MuiTreeItem-root Mui-expanded"
                  data-testid="namespace-service-1"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="MuiTreeItem-content"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <div
                        style="opacity: 0.3;"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          data-testid="minus-square"
                          focusable="false"
                          style="width: 14px; height: 14px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
                    >
                      service-1
                       
                      <span
                        class="subnamespaceBadge"
                        data-testid="namespace-details-badge-for-service-1"
                        id="namespace-details-badge-for-service-1"
                      >
                        S
                      </span>
                    </div>
                  </div>
                </li>
              </div>
            </div>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`<NamespaceTreeView /> renders one namespace without children 1`] = `
<body>
  <div>
    <div
      class="TreeView"
      data-testid="namespace-tree-view"
    >
      <div
        class="DrawerTitle title"
      >
        Tree View
      </div>
      <ul
        aria-multiselectable="false"
        class="MuiTreeView-root"
        role="tree"
      >
        <li
          class="MuiTreeItem-root"
          data-testid="namespace-single-root"
          role="treeitem"
          tabindex="0"
        >
          <div
            class="MuiTreeItem-content"
          >
            <div
              class="MuiTreeItem-iconContainer"
            >
              <div
                style="opacity: 0.3;"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  data-testid="minus-square"
                  focusable="false"
                  style="width: 14px; height: 14px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="MuiTypography-root MuiTreeItem-label label MuiTypography-body1"
            >
              single-root
               
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</body>
`;
